README.md Updated

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background: linear-gradient(120deg, #0f0f0f, #1a1a1a);
+            background: #000;
             font-family: 'Orbitron', sans-serif;
             overflow: hidden;
             height: 100vh;
