--- a/index.html
+++ b/index.html
@@ -4,38 +4,13 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Smokey Effect Cursor</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background: #000;
-            font-family: 'Orbitron', sans-serif;
-            overflow: hidden;
-            height: 100vh;
-            width: 100vw;
-            color: #fff;
-            position: relative;
-        }
-
-        #fluid {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            z-index: 0;
-        }
-    </style>
 </head>
 
-<body>
-<canvas id="fluid"></canvas>
+<body style="background: black">
 
+<canvas id="fluid" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 999;"></canvas>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="cursor.js"></script>
+
 </body>
 </html>
