--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body style="background: black">
 
-<canvas id="fluid" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 999;"></canvas>
+<canvas id="fluid" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;"></canvas>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="cursor.js"></script>
 
